Actions
Bug #10060
closedloader: fix DEBUG messages in disk/part interfaces
Start date:
2018-12-12
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Problems found by Gergő Mihály Doma:
use PRI* macros from inttypes.h and avoid type casts for printf arguments.
fix signed vs unsigned format strings.
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 4da7ed37ba5e1e12c0618eef16411d6fd67dd8c6
commit 4da7ed37ba5e1e12c0618eef16411d6fd67dd8c6 Author: Toomas Soome <tsoome@me.com> Date: 2018-12-17T21:13:38.000Z 10060 loader: fix DEBUG messages in disk/part interfaces Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Reviewed by: Rob Johnston <rob.johnston@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions