10060 loader: fix DEBUG messages in disk/part interfaces Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Reviewed by: Rob Johnston <rob.johnston@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>